@@ -5,55 +5,46 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.mainservice.exception.DuplicateException;
-import ru.practicum.mainservice.exception.NotFoundException;
-import ru.practicum.mainservice.mapper.DtoModelMapper;
-import ru.practicum.mainservice.user.dto.UserDto;
+import ru.practicum.mainservice.user.dto.NewUserRequest;
+import ru.practicum.mainservice.user.dto.UserDtoOut;
+import ru.practicum.mainservice.user.mapper.UserMapper;
 import ru.practicum.mainservice.user.model.User;
 import ru.practicum.mainservice.user.repository.UserRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class UserServiceImpl implements UserService {
+
     private final UserRepository userRepository;
-    private final DtoModelMapper dtoModelMapper;
-    //private final StatsClient statsClient;
 
     @Override
     @Transactional
-    public UserDto saveUser(UserDto user) {
-        if (userRepository.existsByEmail(user.getEmail())) {
-            throw new DuplicateException("такой пользователь уже есть");
-        }
-        User result = userRepository.save(dtoModelMapper.mapToUser(user));
-        return dtoModelMapper.mapToUserDto(result);
+    public UserDtoOut createUser(NewUserRequest request) {
+        User user = UserMapper.toEntity(request);
+        return UserMapper.toDto(userRepository.save(user));
     }
 
     @Override
-    public List<UserDto> findUsers(List<Long> ids, Long from, Long size) {
-        if (ids != null) {
-            List<User> result = userRepository.findAllById(ids);
-            return result.stream().map(dtoModelMapper::mapToUserDto).toList();
+    public List<UserDtoOut> getUsers(List<Long> ids, int from, int size) {
+        Pageable pageable = PageRequest.of(from / size, size);
+        List<User> users;
+
+        if (ids == null || ids.isEmpty()) {
+            users = userRepository.findAllWithOffset(pageable);
+        } else {
+            users = userRepository.findByIdIn(ids, pageable);
         }
-        Pageable pageable = PageRequest.of(
-                from.intValue(),
-                size.intValue()
-        );
-        List<User> result = userRepository.findAll(pageable).getContent();
-        return result.stream()
-                .map(dtoModelMapper::mapToUserDto)
-                .toList();
+
+        return users.stream().map(UserMapper::toDto).collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public void delete(Long userId) {
-        if (!userRepository.existsById(userId)) {
-            throw new NotFoundException("такого пользователя нет");
-        }
+    public void deleteUser(Long userId) {
         userRepository.deleteById(userId);
     }
 }
